--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,99 @@
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@200;300;400;500;600;700;800&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+
+* {
+  box-sizing: border-box;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "karla", sans-serif;
+}
+.btn {
+  font-family: "karla", sans-serif;
+  background-color: transparent;
+  border: none;
+  border-radius: 10px;
+  padding: 14px 28px;
+  cursor: pointer;
+}
+.container {
+  width: 1000px;
+  min-height: 700px;
+  margin: 30px auto;
+  padding: 50px;
+  position: relative;
+  display: flex;
+  background-color: #f5f7fb;
+  color: #293264;
+}
+.container img {
+  position: absolute;
+  z-index: 1;
+}
+img.blue_blob {
+  left: 0;
+  bottom: 0;
+}
+img.pink_blob {
+  right: 0;
+  top: 0;
+}
+.intro {
+  text-align: center;
+  align-self: center;
+  margin: auto;
+}
+.btn.primary {
+  color: white;
+  background-color: #4d5b9e;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.quiz {
+  width: 100%;
+  padding: 20px;
+  position: relative;
+  z-index: 2;
+}
+
+.question h2 {
+  font-size: 20px;
+  margin: 0;
+}
+
+.question .options {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.question .btn {
+  margin-right: 30px;
+  margin-top: 20px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  border: 0.8px solid #4d5b9e;
+}
+
+.btn.selected {
+  border: none;
+  background-color: #d6dbf5;
+}
+
+.btn.selected.wrong {
+  background-color: #f8bcbc;
+}
+
+.btn.correct,
+.btn.selected.correct {
+  background-color: #94d7a2;
+}
+
+.line {
+  margin: 20px 0;
+  border-bottom: 1px solid #dbdef0;
+  position: relative;
+  z-index: 2;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
