--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,29 @@ img.pink_blob {
   align-self: center;
   margin: auto;
 }
+
+
+
+.intro form > div{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 26px;
+}
+.intro form{
+  margin: 30px 0;
+}
+.intro label{
+  align-self: start;
+  margin-bottom: 5px;
+}
+
+.intro input, .intro select{
+  height: 35px;
+  border-radius: 5px;
+  border: 0.7px solid #00000044;
+  text-indent: 5px;
+}
+
 .btn.primary {
   color: white;
   background-color: #4d5b9e;
@@ -96,4 +119,18 @@ img.pink_blob {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (max-width: 768px){
+  .container {
+    width: auto;
+  }
+}
+@media screen and (max-width: 480px){
+  .container {
+    padding: 25px;
+  }
+  .result{
+    align-items: start;
+  }
 }
